--- a/source/_posts/我的前端开发笔记整理.md
+++ b/source/_posts/我的前端开发笔记整理.md
@@ -1,5 +1,5 @@
 ---
-title: 我的前端开发笔记整理【Javascript篇】（2017-09-22）
+title: 近期前端开发笔记整理【Javascript篇】（2017-09-22）
 date: 2017-09-22 11:29:04
 tags:
     - JavaScript
